Revert "Fix for too big font used in login field"
This reverts commit 00a9cc893943516b432dd93ee97f2544fa80996d.

--- a/pos/client/style/login.css
+++ b/pos/client/style/login.css
@@ -53,7 +53,7 @@
     background-color: white;
     border-radius: 6px;
     color: black;
-    font-size: 3em;
+    font-size: 4em;
     height: 60px;
     left: 40px;
     padding-left: 20px;
